Update azure-pipelines.yml for Azure Pipelines
Added dll

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,3 +38,11 @@ steps:
   inputs:
     testResultsFormat: 'XUnit'
     testResultsFiles: '**/test-library.csproj'
+- task: VSTest@2
+  inputs:
+    testSelector: 'testAssemblies'
+    testAssemblyVer2: |
+      **\*library.dll
+      !**\*TestAdapter.dll
+      !**\obj\**
+    searchFolder: '$(System.DefaultWorkingDirectory)'
