Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,7 @@ variables:
       projects: '**/*UnitTest*.csproj'
       arguments: '--configuration $(BuildConfiguration)'
 
-
+steps:
 - task: NuGetToolInstaller@1
 
 - task: NuGetCommand@2
