--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,15 +1,10 @@
 # ASP.NET Core (.NET Framework)
-
 # Build and test ASP.NET Core projects targeting the full .NET Framework.
 # Add steps that publish symbols, save build artifacts, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
 - master
-
-jobs:
-- job: Demo
-  displayName: 'Build Web App'
 
 pool:
   vmImage: 'windows-latest'
@@ -19,37 +14,21 @@ variables:
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
-
 steps:
-- task: DotNetCoreCLI@2
-  displayName: Restore
-  inputs:
-    command: restore
-    projects: '**/Demo.csproj'
-
-- task: DotNetCoreCLI@2
-  displayName: Build
-  inputs:
-    projects: '**/Demo.csproj'
-    arguments: '--configuration $(BuildConfiguration)'
-
-- task: DotNetCoreCLI@2
-  displayName: Test
-  inputs:
-    command: test
-    projects: '**/*UnitTest*.csproj'
-    arguments: '--configuration $(BuildConfiguration)'
-
 - task: NuGetToolInstaller@1
 
 - task: NuGetCommand@2
   inputs:
-  restoreSolution: '$(solution)'
+    restoreSolution: '$(solution)'
 
-- task: DotNetCoreCLI@2
-  displayName: Publish
+- task: VSBuild@1
   inputs:
-    command: publish
-    publishWebProjects: True
-    arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
-    zipAfterPublish: True
+    solution: '$(solution)'
+    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\WebApp.zip" /p:DeployIisAppPath="Default Web Site"'
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
+
+- task: VSTest@2
+  inputs:
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
