--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,8 +6,9 @@
 trigger:
 - master
 
-pool:
-  vmImage: 'windows-latest'
+#pool:
+#  vmImage: 'windows-latest'
+pool: 'windows-agent'
 
 variables:
   solution: '**/*.sln'
