Update Nuget.yml for Azure Pipelines

--- a/Nuget.yml
+++ b/Nuget.yml
@@ -60,6 +60,6 @@ steps:
 - task: NuGetCommand@2
   inputs:
     command: 'pack'
-    packagesToPack: '**/*.csproj'
+    packagesToPack: '**/Demo.csproj'
     versioningScheme: 'off'
 
