Update Nuget.yml for Azure Pipelines

--- a/Nuget.yml
+++ b/Nuget.yml
@@ -58,8 +58,17 @@ steps:
     arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
 
 - task: NuGetCommand@2
+  displayName: 'Nuget pack'
   inputs:
     command: 'pack'
     packagesToPack: '**/Demo.csproj'
     versioningScheme: 'off'
 
+
+- task: NuGetCommand@2
+  displayName: 'Feed Nuget pack'
+  inputs:
+    command: 'push'
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
+    nuGetFeedType: 'internal'
+    publishVstsFeed: '6d6a8a4d-9d44-483d-8cbf-152ef325cb31/b847245d-760f-4d19-983c-4342e5809905'
