--- a/Nuget.yml
+++ b/Nuget.yml
@@ -65,12 +65,12 @@ steps:
     versioningScheme: 'off'
 
 
+
 - task: NuGetCommand@2
-  displayName: 'Push packed code to Azure Artifacts'
   inputs:
     command: 'push'
     packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
     nuGetFeedType: 'internal'
     publishVstsFeed: '6d6a8a4d-9d44-483d-8cbf-152ef325cb31/b847245d-760f-4d19-983c-4342e5809905'
-    versioningScheme: 'byBuildNumber'
-
+    allowPackageConflicts: true
+    versioningScheme: byEnvVar
