--- a/Nuget.yml
+++ b/Nuget.yml
@@ -62,9 +62,7 @@ steps:
   inputs:
     command: 'pack'
     packagesToPack: '**/Demo.csproj'
-    versioningScheme: 'off'
-
-
+    versioningScheme: 'byEnvVar'
 
 - task: NuGetCommand@2
   inputs:
