--- a/Nuget.yml
+++ b/Nuget.yml
@@ -58,11 +58,13 @@ steps:
     arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
 
 - task: NuGetCommand@2
-  displayName: 'Pack Hiscox Azurefunctions'
   inputs:
     command: 'pack'
     packagesToPack: '**/Demo.csproj'
-    versioningScheme: 'byEnvVar'
+    versioningScheme: 'byPrereleaseNumber'
+    majorVersion: '1'
+    minorVersion: '0'
+    patchVersion: '0'
 
 - task: NuGetCommand@2
   inputs:
