Update Nuget.yml for Azure Pipelines

--- a/Nuget.yml
+++ b/Nuget.yml
@@ -57,7 +57,9 @@ steps:
     publishWebProjects: true
     arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
 
+
 - task: NuGetCommand@2
+  displayName: 'Pack with version'
   inputs:
     command: 'pack'
     packagesToPack: '**/Demo.csproj'
@@ -67,10 +69,9 @@ steps:
     patchVersion: '0'
 
 - task: NuGetCommand@2
+  displayName: 'Feed'
   inputs:
     command: 'push'
     packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
     nuGetFeedType: 'internal'
     publishVstsFeed: '6d6a8a4d-9d44-483d-8cbf-152ef325cb31/b847245d-760f-4d19-983c-4342e5809905'
-    allowPackageConflicts: true
-    versioningScheme: byEnvVar
